# CapMatrix

./: .gitignore  AGENTS.md  BAND_HACKATHON_PLAN.md  CLAUDE.md  FEEDBACK.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json
band-agents/: README.md  agent_config.yaml  agents.yaml.example  pyproject.toml
band-agents/agents/: base.py  executor_agent.py  orchestrator_agent.py  risk_monitor_agent.py  scout_agent.py
band-agents/clove_band_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
band-agents/prompts/: executor.md  orchestrator.md  risk_monitor.md  scout.md
band-agents/scripts/: launch_workflow.py  register_agents.py  run_all.sh  run_local.sh
band-agents/tools/: capmatrix_api.py  execution_tools.py  intelligence_tools.py  risk_tools.py
cache/: solidity-files-cache.json
contracts/: CloveAutoDeposit.sol
contracts/cache/: solidity-files-cache.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/marketplace/: page.tsx
src/components/: AgentIdentityCard.tsx  AgentThoughtNode.tsx  BrandLogos.tsx  ChatPanel.tsx  DelegationChainPanel.tsx  GasFeeDisclosure.tsx  MetaMaskGate.tsx  PermissionReportPanel.tsx  PortfolioPanel.tsx
src/components/ui/: herowith-logos.tsx  infinite-slider.tsx  logo-cloud.tsx  tubelight-navbar.tsx
src/lib/agent/: agentTypes.ts  agents.ts  planner.ts  stats.ts  tools.ts  workflows.ts
src/lib/auth/: PrivyProvider.tsx  internal.ts
src/lib/band/: execution.ts  server.ts  types.ts
src/lib/config/: env.ts
src/lib/featherless/: client.ts
(+39 files in other folders)
