[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capmatrix-band-agents"
version = "0.1.0"
description = "Band of Agents Hackathon — CapMatrix multi-agent DeFi system"
requires-python = ">=3.11"
dependencies = [
    "band-sdk>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "thenvoi-client-rest>=0.0.4",
]

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "scripts*"]
